# qps

./: CHANGES  Makefile  README.md  README_INSTALL  command.cpp  command.h  configure.ac  details.cpp  dialogs.cpp  fieldsel.cpp  htable.cpp  htable.h  infobar.cpp  lookup.cpp  misc.cpp  misc.h  prefs.cpp  proc.h  proc.txt  proc_common.cpp  proc_linux.cpp  pstable.cpp  qps.cpp  qps.h  qps.lsm  qps.pro  qps.spec  qttableview.cpp  qttableview.h  stable.h  trayicon.cpp  trayicon.h  wchan.cpp
CVS/: Entries  Root
debian/: changelog  control  copyright  menu  rules
debian/CVS/: Entries  Repository  Root
gtk/: Makefile  main.cpp  main.glade  qps.py
gtk/CVS/: Entries  Repository
icon/: x1.xpm  x2.xpm
icon/CVS/: Entries  Repository
