#AM_INIT_AUTOMAKE(autoqt, 0.03)
AC_INIT(test,0.1)
#AC_INIT (package, version, [bug-report], [tarname])
BNV_HAVE_QT
# Checks for programs.
AC_PROG_CC #check gcc
#AC_PROG_INSTALL

# Checks for libraries.
#AC_CHECK_LIB(socket, connect)

# Check for Qt, so we know what to put in the pkg-config .pc file:
# This defines QT_CXXFLAGS, QT_LDADD, and MOC
#gw_CHECK_QT

dnl doxygen is used to create the documentation
dnl It's okay if doxygen is not found
#AC_CHECK_PROG(DOXYGEN, doxygen, doxygen, "echo doxygen not available")

#AC_OUTPUT(Makefile  \	  doc/Doxyfile	  autoqt-1.0.pc	 )  #make Makefile?
